# uget

./: .gitignore  AUTHORS  BUILDING.md  CHANGELOG.md  README  README.md  meson.build  meson.options  uget-gtk.appdata.xml  uget-gtk.desktop  uget.spec
packaging/windows/: uget.rc
po/: ChangeLog  LINGUAS  meson.build
tests/: test-info.c  test-json.c  test-jsonrpc.c  test-plugin+app.c  test-uget-cxx.cxx  test-uget.c  test-uglib.c
tools/: make-dist-windows.bat
uget/: UgetA2cf.c  UgetApp.c  UgetAria2.c  UgetCurl.c  UgetPluginCurl.c  UgetPluginMega.c  UgetRss.c
uglib/: UgList.c  UgStdio.h  UgUri.c  UgUtil.c  UgUtil.h
ui-gtk/: UgtkAboutDialog.c  UgtkAboutDialog.h  UgtkApp-callback.c  UgtkApp-main.c  UgtkApp-timeout.c  UgtkApp-ui.c  UgtkApp.c  UgtkApp.h  UgtkBanner.c  UgtkBanner.h  UgtkBatchDialog.c  UgtkBatchDialog.h  UgtkCategoryForm.c  UgtkConfirmDialog.c  UgtkDownloadForm.c  UgtkDownloadForm.h  UgtkMenubar-ui.c  UgtkMenubar.c  UgtkMenubar.h  UgtkNodeDialog.c  UgtkNodeDialog.h  UgtkNodeList.c  UgtkNodeList.h  UgtkNodeObject.c  UgtkNodeObject.h  UgtkNodeTree.c  UgtkNodeTree.h  UgtkNodeView.c  UgtkNodeView.h  UgtkProxyForm.c  UgtkProxyForm.h  UgtkScheduleForm.c  UgtkSelector.c  UgtkSelector.h  UgtkSequence.c  UgtkSequence.h  UgtkSettingDialog.c  UgtkSettingForm.c  UgtkSettingForm.h  UgtkSummary.c  (+6 more)
